--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "^9",
     "favicons": "^6.2.1",
     "postcss": "^7",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
